feat: atualizar capas por id
